# OrbConnectWeb

./: Changelog.txt  LICENSE  README.md  README.txt
Config/: OrbConnect.cfg
Doc/OrbConnect/: ClientReadme.txt  OrbConnectChanges.txt  OrbConnectUserGuide-2.1.doc  ReleaseNotes.txt
Orbitersdk/Modules/Plugin/OrbConnect/: CMakeLists.txt
Orbitersdk/Modules/Plugin/OrbConnect/OrbConnect/: CMakeLists.txt  CommandParser.h  NavigationCommandParser.cpp  OapiCommandParser.cpp  OrbConnect.vcxproj  OrbConnect.vcxproj.filters  OrigVesselCommandParser.cpp  PlanetCommandParser.h  SubscriptionParser.cpp  SubscriptionParser.h  VesselCommandParser.h  XRCtlCommandParser.cpp  XRVesselCtrl.h  http.h  mongoose.c
Orbitersdk/samples/OrbConnect/: OrbConnect.sln
Orbitersdk/samples/OrbConnect/OrbConnect/: Gbody.cpp  Gbody.h  MessageStream.h  NavigationCommandParser.h  OapiCommandParser.h  ObjectCommandParser.cpp  ObjectCommandParser.h  OrbConnect.cpp  OrbConnect.h  PlanetCommandParser.cpp  VesselCommandParser.cpp  XRCtlCommandParser.h  http.cpp
www/: README.fonts.txt  example.html  index.html  orbiterclient.js  timer.js
www/css/ui-darkness/: jquery-ui-1.10.4.custom.css  jquery-ui-1.10.4.custom.min.css
